--- a/UIdev/UIdev.sass/ands.scss
+++ b/UIdev/UIdev.sass/ands.scss
@@ -10,6 +10,16 @@ Some of these variables may be overwritten by the AnDS declarations.
 
 // @import url(contributors/normalize/_variables.scss);
 @import "contributors/normalize/_variables.scss";
+
+// AnDS General Variables
+@import "ands/variables.scss";
+
+// AnDS Theme Variables
+@import "ands/akin_network/variables.scss";
+// @import "ands/akin_martech/variables.scss";
+//@import "ands/akin_gethub/variables.scss";
+//@import "ands/akin_digicraft/variables.scss"
+
 /* 2. NORMALIZE
 
 This is applied before any custom styling to ensure consistent base styling across all supported browsers:
