--- a/UIdev/UIdev.sass/ands/akin_network/light/_variables.scss
+++ b/UIdev/UIdev.sass/ands/akin_network/light/_variables.scss
@@ -3,7 +3,9 @@
 
 // DEFAULTS
 // Typography default
-$font-colour: $akin-900 !default;
+$font-colour: $akin-800 !default;
+$brand-font-colour: $brand-800 !default;
+
 // Headers defaults
 $h1-font-colour: $font-colour;
 $h2-font-colour: $font-colour;
@@ -14,3 +16,12 @@ $h6-font-colour: $font-colour;
 // Paragraphs and lists defaults
 $p-font-colour: $font-colour;
 $li-font-colour: $font-colour;
+
+// Backgrounds
+$background-colour: $akin-neutral-0 !default;
+$header-container-background-colour: $akin-0-t56 !default;
+$brand-background-colour: $akin-brand-200 !default;
+
+// Containers and block elements defaults
+$container-background-colour: $background-colour;
+$element-background-colour: $background-colour;
