BannerSVG component: static rendering

--- a/UIdev/UIdev.sass/ands/_config.scss
+++ b/UIdev/UIdev.sass/ands/_config.scss
@@ -1,3 +1,6 @@
+// Web font imports from GOOGLE FONTS
+@import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap");
+
 // Primitives management
 @import "primitives";
 
@@ -59,19 +62,14 @@ $flex-breakpoints-config: (
   "xxl": $size-64,
 );
 
-// Web font imports from GOOGLE FONTS
-@import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap");
 $font-family: "Nunito Sans", sans-serif;
 
 // Icons imports and configuration
 
-/* 
-ICON FONTS 
-Font Assets location
-
-local path: "../assets/fonts"
-git page repository: https://akinnetwork.github.io/andsicon/fonts/
-*/
+// ICON FONTS
+// Font Assets location
+// local path: "../assets/fonts"
+// git page repository: https://akinnetwork.github.io/andsicon/fonts/
 
 $icon-ands-font-family: "ands-icons" !default;
 $icon-ands-font-path: "../assets/fonts" !default; //Configurable: FONT path
