--- a/UIdev/UIdev.sass/ands/akin_network/light/_variables.scss
+++ b/UIdev/UIdev.sass/ands/akin_network/light/_variables.scss
@@ -25,3 +25,9 @@ $brand-background-colour: $akin-brand-200 !default;
 // Containers and block elements defaults
 $container-background-colour: $background-colour;
 $element-background-colour: $background-colour;
+
+// BRANDED ITEMS
+
+$brand-colour: $akin-brand-500 !default;
+$brand-colour-dark: $brand-800 !default;
+$brand-colour-light: $akin-brand-200 !default;
