Banner Style adjustments

--- a/UIdev/UIdev.sass/ands/akin_network/light/_variables.scss
+++ b/UIdev/UIdev.sass/ands/akin_network/light/_variables.scss
@@ -21,13 +21,13 @@ $li-font-colour: $font-colour;
 $background-colour: $akin-neutral-0 !default;
 $header-container-background-colour: $akin-0-t56 !default;
 $brand-background-colour: $akin-brand-200 !default;
+$block-light-colour: $akin-neutral-200 !default;
 
 // Containers and block elements defaults
 $container-background-colour: $background-colour;
 $element-background-colour: $background-colour;
 
 // BRANDED ITEMS
-
 $brand-colour: $akin-brand-500 !default;
 $brand-colour-dark: $brand-800 !default;
 $brand-colour-light: $akin-brand-200 !default;
