--- a/UIdev/UIdev.sass/ands/components/svg/banner/banner.scss
+++ b/UIdev/UIdev.sass/ands/components/svg/banner/banner.scss
@@ -1,5 +1,5 @@
 /* 
-@component BannerSVG
+@component svg/Banner[Cell/Composite]
 @author: Margareta.Sandor@akin.network
 Powered by @AkinTechnologies
 */
