--- a/UIdev/UIdev.sass/ands/_typography.scss
+++ b/UIdev/UIdev.sass/ands/_typography.scss
@@ -1,6 +1,7 @@
 @import "config";
 @import "mixin";
 
+// Header H1
 h1 {
   font-family: $font-family;
   font-style: normal;
@@ -15,6 +16,7 @@ h1 {
   }
 }
 
+// Header H2
 h2 {
   font-family: $font-family;
   font-style: normal;
@@ -29,61 +31,17 @@ h2 {
   }
 }
 
-// /* Presentation Subtitle Note */
-// @mixin text-style-presentation-h-6() {
-//   font-size: 1.5rem;
-//   font-family: Nunito Sans;
-//   font-weight: 600;
-//   font-style: normal;
-//   line-height: 120%;
-//   letter-spacing: 0.05em;
-//   text-decoration: none;
-//   text-transform: none;
-// }
-
-// /* Section Title */
-// @mixin text-style-web-desktop-h-5() {
-//   font-size: 1rem;
-//   font-family: Nunito Sans;
-//   font-weight: 700;
-//   font-style: normal;
-//   line-height: 120%;
-//   letter-spacing: 0.1em;
-//   text-decoration: none;
-//   text-transform: uppercase;
-// }
-
-// /* Section title tablets */
-// @mixin text-style-web-tablet-h-5() {
-//   font-size: 1rem;
-//   font-family: Nunito Sans;
-//   font-weight: 700;
-//   font-style: normal;
-//   line-height: 120%;
-//   letter-spacing: 0.1em;
-//   text-decoration: none;
-//   text-transform: uppercase;
-// }
-
-// /* Section title mobile */
-// @mixin text-style-web-mobile-h-5() {
-//   font-size: 1rem;
-//   font-family: Nunito Sans;
-//   font-weight: 700;
-//   font-style: normal;
-//   line-height: 120%;
-//   letter-spacing: 0.1em;
-//   text-decoration: none;
-//   text-transform: uppercase;
-// }
-
-// @mixin text-style-navigation-label() {
-//   font-size: 1rem;
-//   font-family: Nunito Sans;
-//   font-weight: 700;
-//   font-style: normal;
-//   line-height: 120%;
-//   letter-spacing: 0.015em;
-//   text-decoration: none;
-//   text-transform: none;
-// }
+// Paragraph P
+p {
+  font-family: $font-family;
+  font-style: normal;
+  text-decoration: none;
+  text-transform: none;
+  color: $h2-font-colour;
+  @include respond-to($p-font-size) using ($breakpoint, $value) {
+    font-size: $value;
+    font-weight: map-get($p-font-weight, $breakpoint);
+    line-height: map-get($p-line-height, $breakpoint);
+    letter-spacing: map-get($p-letter-space, $breakpoint);
+  }
+}
