--- a/UIdev/UIdev.sass/ands/akin_network/_primitives.scss
+++ b/UIdev/UIdev.sass/ands/akin_network/_primitives.scss
@@ -1,5 +1,5 @@
 // Variables relevant to akin_network theme;
-
+// Neutral
 $akin-neutral-0: rgba(255, 255, 255, 1) !default;
 $akin-neutral-100: rgba(250, 252, 255, 1) !default;
 $akin-neutral-200: rgba(242, 249, 255, 1) !default;
@@ -10,6 +10,7 @@ $akin-neutral-600: rgba(114, 135, 153, 1) !default;
 $akin-700: rgba(89, 109, 128, 1) !default;
 $akin-800: rgba(66, 85, 102, 1) !default;
 $akin-900: rgba(46, 62, 77, 1) !default;
+// Brand
 $akin-brand-100: rgba(242, 251, 255, 1) !default;
 $akin-brand-200: rgba(204, 240, 255, 1) !default;
 $akin-brand-300: rgba(145, 213, 242, 1) !default;
@@ -19,6 +20,7 @@ $akin-brand-600: rgba(29, 143, 191, 1) !default;
 $brand-700: rgba(17, 121, 166, 1) !default;
 $brand-800: rgba(7, 101, 140, 1) !default;
 $brand-900: rgba(0, 80, 115, 1) !default;
+// Success
 $akin-success-100: rgba(242, 255, 244, 1) !default;
 $akin-success-200: rgba(204, 255, 213, 1) !default;
 $akin-success-300: rgba(145, 242, 161, 1) !default;
@@ -28,6 +30,7 @@ $akin-success-600: rgba(29, 191, 56, 1) !default;
 $success-700: rgba(17, 166, 41, 1) !default;
 $success-800: rgba(7, 140, 29, 1) !default;
 $success-900: rgba(0, 115, 19, 1) !default;
+// Warning
 $akin-warning-100: rgba(255, 253, 242, 1) !default;
 $akin-warning-200: rgba(255, 247, 204, 1) !default;
 $akin-warning-300: rgba(242, 226, 145, 1) !default;
@@ -37,6 +40,7 @@ $akin-warning-600: rgba(191, 164, 29, 1) !default;
 $warning-700: rgba(166, 141, 17, 1) !default;
 $warning-800: rgba(140, 118, 7, 1) !default;
 $warning-900: rgba(115, 96, 0, 1) !default;
+// Destructive
 $akin-destructive-100: rgba(255, 242, 242, 1) !default;
 $akin-destructive-200: rgba(255, 204, 204, 1) !default;
 $akin-destructive-300: rgba(242, 145, 145, 1) !default;
@@ -46,12 +50,18 @@ $akin-destructive-600: rgba(191, 29, 29, 1) !default;
 $destructive-700: rgba(166, 17, 17, 1) !default;
 $destructive-800: rgba(140, 7, 7, 1) !default;
 $destructive-900: rgba(115, 0, 0, 1) !default;
+// Decorative
 $akin-decorative-800: rgba(235, 235, 255, 1) !default;
 $akin-decorative-700: rgba(240, 240, 255, 1) !default;
 $akin-decorative-600: rgba(245, 245, 255, 1) !default;
 $akin-decorative-500: rgba(250, 250, 255, 1) !default;
 $decorative-900: rgba(229, 229, 255, 1) !default;
+// Transparent
 $akin-0-t56: rgba(255, 255, 255, 0.56) !default;
+$akin-0-t72: rgba(255, 255, 255, 0.72) !default;
+$akin-0-t88: rgba(255, 255, 255, 0.88) !default;
+// Transparent invert
 $akin-700-t56: rgba(89, 109, 128, 0.56) !default;
 $akin-800-t56: rgba(66, 85, 102, 0.56) !default;
 $akin-900-t64: rgba(46, 62, 77, 0.64) !default;
+$akin-900-t88: rgba(46, 62, 77, 0.88) !default;
