--- a/UIdev/UIdev.sass/ands/akin_network/light/_variables.scss
+++ b/UIdev/UIdev.sass/ands/akin_network/light/_variables.scss
@@ -4,7 +4,8 @@
 // DEFAULTS
 // Typography default
 $font-colour: $akin-800 !default;
-$brand-font-colour: $brand-800 !default;
+$font-colour-invert: $akin-neutral-100 !default;
+$font-colour-brand: $brand-800 !default;
 
 // Headers defaults
 $h1-font-colour: $font-colour;
